; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena.c_siena_get_wol.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_siena.c_siena_get_wol.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { %struct.siena_nic_data* }
%struct.siena_nic_data = type { i32 }
%struct.ethtool_wolinfo = type { i32, i8*, i8* }

@WAKE_MAGIC = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.efx_nic*, %struct.ethtool_wolinfo*)* @siena_get_wol to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @siena_get_wol(%struct.efx_nic* %0, %struct.ethtool_wolinfo* %1) #0 {
  %3 = alloca %struct.efx_nic*, align 8
  %4 = alloca %struct.ethtool_wolinfo*, align 8
  %5 = alloca %struct.siena_nic_data*, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %3, align 8
  store %struct.ethtool_wolinfo* %1, %struct.ethtool_wolinfo** %4, align 8
  %6 = load %struct.efx_nic*, %struct.efx_nic** %3, align 8
  %7 = getelementptr inbounds %struct.efx_nic, %struct.efx_nic* %6, i32 0, i32 0
  %8 = load %struct.siena_nic_data*, %struct.siena_nic_data** %7, align 8
  store %struct.siena_nic_data* %8, %struct.siena_nic_data** %5, align 8
  %9 = load i8*, i8** @WAKE_MAGIC, align 8
  %10 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %11 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %10, i32 0, i32 2
  store i8* %9, i8** %11, align 8
  %12 = load %struct.siena_nic_data*, %struct.siena_nic_data** %5, align 8
  %13 = getelementptr inbounds %struct.siena_nic_data, %struct.siena_nic_data* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = icmp ne i32 %14, -1
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load i8*, i8** @WAKE_MAGIC, align 8
  %18 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %19 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %18, i32 0, i32 1
  store i8* %17, i8** %19, align 8
  br label %23

20:                                               ; preds = %2
  %21 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %22 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %21, i32 0, i32 1
  store i8* null, i8** %22, align 8
  br label %23

23:                                               ; preds = %20, %16
  %24 = load %struct.ethtool_wolinfo*, %struct.ethtool_wolinfo** %4, align 8
  %25 = getelementptr inbounds %struct.ethtool_wolinfo, %struct.ethtool_wolinfo* %24, i32 0, i32 0
  %26 = call i32 @memset(i32* %25, i32 0, i32 4)
  ret void
}

declare dso_local i32 @memset(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
